Fix time picker on Firefox

--- a/front/src/PoolTool.css
+++ b/front/src/PoolTool.css
@@ -22,7 +22,7 @@
    padding: 5px 32px 0px 32px;
    width: 100%;
    overflow: hidden;
-   max-width: 320px;
+   max-width: 360px;
    margin: auto;
    box-sizing: border-box;
 }
